# ik_llama.cpp

./: .clang-format  .dockerignore  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CMakePresets.json  DSA_REFERENCE.md  LICENSE  Makefile  README.md  convert-hf-to-gguf.py  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_imatrix_gguf_to_dat.py  diff.diff  docker-bake.hcl  docker-bake.override.hcl  flake.nix  ggml-common.h  ggml-cuda.cu  ggml-metal.m  ggml-metal.metal  ggml-quants.c  ggml-quants.h  ggml.c  ggml.h  gguf_layer_editor.py  gguf_mtp_extract_merge.py  git.diff  iqk-quantize.cpp  iqk-quantize.h  iqk_mul_mat.cpp  iqk_mul_mat.h  llama.cpp  llama.h  requirements.txt  sgemm.cpp  (+1 more)
ci/: run.sh
examples/quantize-stats/: CMakeLists.txt  quantize-stats.cpp
examples/rpc/: CMakeLists.txt  README.md  rpc-server.cpp
examples/server/: CMakeLists.txt  README.md  atomic_hash_map.hpp  deepseek_r1_tools.hpp  function_calls.hpp  function_calls.md  kimi_k2_tools.hpp  llama-perplexity.sh  lock-free.hpp  qwen3_tools.hpp  server-chat.cpp  server-chat.h  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-cors-proxy.h  server-queue.cpp  server-queue.h  server-task.cpp  server-task.h  server.cpp  streaming_chat.hpp  utils.hpp
examples/server/parsers/: kimi_k2_parser.hpp  qwen3_parser.hpp
examples/server/public/: index.html
examples/server/public_legacy/: json-schema-to-grammar.mjs
examples/server/public_llamacpp/: index_llamacpp.html
examples/server/public_mikupad/: index.html
examples/server/tests/features/: codex_responses.feature  server.feature
examples/server/tests/features/steps/: codex_responses_steps.py  responses_steps.py  steps.py
examples/server/webui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/server/webui/public/: demo-conversation.json
examples/server/webui/src/: App.tsx  Config.ts  index.scss
examples/server/webui/src/components/: ChatMessage.tsx  ChatScreen.tsx  Header.tsx  MarkdownDisplay.tsx  SettingDialog.tsx  Sidebar.tsx  useChatExtraContext.tsx  useChatScroll.tsx  useChatTextarea.ts
examples/server/webui/src/utils/: app.context.tsx  common.tsx  misc.ts  storage.ts  types.ts
examples/server/webui_llamacpp/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
examples/server/webui_llamacpp/.storybook/: main.ts  preview.ts  vitest.setup.ts
examples/server/webui_llamacpp/scripts/: dev.sh  install-git-hooks.sh  post-build.sh  vite-plugin-llama-cpp-build.ts
examples/server/webui_llamacpp/src/: app.css  app.d.ts
examples/server/webui_llamacpp/src/lib/components/app/: index.ts
examples/server/webui_llamacpp/src/lib/components/app/actions/: ActionIcon.svelte
examples/server/webui_llamacpp/src/lib/components/app/badges/: BadgeInfo.svelte
examples/server/webui_llamacpp/src/lib/constants/: debounce.ts  localstorage-keys.ts  settings-config.ts  supported-file-types.ts
examples/server/webui_llamacpp/src/lib/enums/: files.ts
examples/server/webui_llamacpp/src/lib/hooks/: use-processing-state.svelte.ts
examples/server/webui_llamacpp/src/lib/services/: chat.ts  context.ts  index.ts  models.ts  parameter-sync.spec.ts  parameter-sync.ts  slots.ts
examples/server/webui_llamacpp/src/lib/stores/: chat.svelte.ts  database.ts  models.svelte.ts  server.svelte.ts  settings.svelte.ts
examples/server/webui_llamacpp/src/lib/types/: api.d.ts  chat.d.ts  database.d.ts  models.d.ts  settings.d.ts
examples/server/webui_llamacpp/src/lib/utils/: agentic.ts  api-key-validation.ts  audio-recording.ts  config-helpers.ts  convert-files-to-extra.ts  copy.ts  file-preview.ts  file-type.ts  index.ts  latex-protection.test.ts  latex-protection.ts  modality-file-validation.ts  model-names.test.ts  model-names.ts  pdf-processing.ts  process-uploaded-files.ts  svg-to-png.ts  text-files.ts  thinking.ts  webp-to-png.ts
examples/server/webui_llamacpp/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  page.svelte.test.ts
examples/server/webui_llamacpp/src/routes/chat/[id]/: +page.svelte  +page.ts
examples/server/webui_llamacpp/src/stories/: ChatForm.stories.svelte  ChatMessage.stories.svelte  ChatSettingsDialog.stories.svelte  ChatSidebar.stories.svelte  MarkdownContent.stories.svelte
examples/server/webui_llamacpp/src/stories/fixtures/: math-formulas.ts  storybook-mocks.ts
examples/server/webui_llamacpp/tests/stories/: SidebarNavigation.stories.svelte
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-build-context.cpp  llama-build-context.h  llama-context.h  llama-cparams.h  llama-delta-net.cpp  llama-delta-net.h  llama-dflash-profile.h  llama-dflash.cpp  llama-dflash.h  llama-expert-io.h  llama-grammar.cpp  llama-grammar.h  llama-hparams.cpp  llama-hparams.h  llama-impl.h  llama-load-tensors.cpp  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-quantize.cpp  llama-quantize.h  llama-reload-info.h  llama-reload.cpp  llama-sampling.cpp  llama-sampling.h  llama-spec-features-dflash.cpp  llama-spec-features-dflash.h  llama-spec-features.cpp  llama-spec-features.h  llama-vocab.cpp  llama-vocab.h  llama.cpp  pxa-seq-decomp.h  unicode-data.h  (+3 more)
src/graphs/: build_arctic.cpp  build_baichuan.cpp  build_bailingmoe2.cpp  build_bert.cpp  build_bitnet.cpp  build_bloom.cpp  build_chatglm.cpp  build_codeshell.cpp  build_cohere2.cpp  build_cohere2_moe.cpp  build_command_r.cpp  build_dbrx.cpp  build_deci.cpp  build_deepseek2.cpp  build_dflash.cpp  build_dots1.cpp  build_ernie45.cpp  build_falcon.cpp  build_gemma.cpp  build_gemma2.cpp  build_gemma3.cpp  build_gemma4.cpp  build_glm4.cpp  build_gpt2.cpp  build_gptneox.cpp  build_grok.cpp  build_hunyuan.cpp  build_internlm2.cpp  build_jais.cpp  build_laguna.cpp  build_llama.cpp  build_mamba.cpp  build_mellum.cpp  build_mimo2.cpp  build_minicpm.cpp  build_minimaxm2.cpp  build_minimaxm3.cpp  build_mistral3.cpp  build_mpt.cpp  build_olmo.cpp  (+21 more)
(+1932 files in other folders)
